--- a/style.css
+++ b/style.css
@@ -58,6 +58,39 @@ body {
     padding: var(--spacing-400);
 }
 
+/* Utility Classes */
+.color-cyan-600 {
+    color: #4D96A9;
+}
+
+.color-cyan-300 {
+    color: #8FE3F9;
+}
+
+.color-purple-500 {
+    color: #855FB1;
+}
+
+.color-purple-300 {
+    color: #D9B8FF;
+}
+
+.color-slate-900 {
+    color: #28283D;
+}
+
+.color-slate-600 {
+    color: #87879D;
+}
+
+.color-slate-300 {
+    color: #D1F1DF;
+}
+
+.color-white {
+    color: #FAFAFA;
+}
+
 .text-preset-1 {
     font-family: var(--font-family);
     font-weight: var(--font-weight-black);
@@ -93,4 +126,26 @@ body {
     font-weight: var(--font-weight-black);
     font-size: 1rem;
     line-height: 1.5;
+}
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
+    gap: 32px;
+}
+
+.showcase-images {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px;
+}
+
+.showcase-images img {
+    flex: 1;
+    min-width: 0;
+}
+
+img {
+    max-inline-size: 100%;
+    block-size: auto;
 }
