--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     /* Colors */
     --color-cyan-600: #4D96A9;
     --color-cyan-300: #8FE3F9;
-    --color-purple-500: #855FB1;
+    --color-purple-600: #855FB1;
     --color-purple-300: #D9B8FF;
     --color-slate-900: #28283D;
     --color-slate-600: #87879D;
@@ -58,6 +58,11 @@ body {
     padding: var(--spacing-400);
 }
 
+img {
+    max-inline-size: 100%;
+    block-size: auto;
+}
+
 /* Utility Classes */
 .color-cyan-600 {
     color: #4D96A9;
@@ -67,7 +72,7 @@ body {
     color: #8FE3F9;
 }
 
-.color-purple-500 {
+.color-purple-600 {
     color: #855FB1;
 }
 
@@ -89,6 +94,14 @@ body {
 
 .color-white {
     color: #FAFAFA;
+}
+
+.bg-color-cyan-600 {
+    background-color: #4D96A9;
+}
+
+.bg-color-purple-600 {
+    background-color: #855FB1;
 }
 
 .text-preset-1 {
@@ -145,7 +158,9 @@ body {
     min-width: 0;
 }
 
-img {
-    max-inline-size: 100%;
-    block-size: auto;
+.button-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: var(--spacing-200);
 }
