--- a/style.css
+++ b/style.css
@@ -63,6 +63,12 @@ img {
     block-size: auto;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 /* Utility Classes */
 .color-cyan-600 {
     color: #4D96A9;
@@ -104,11 +110,16 @@ img {
     background-color: #855FB1;
 }
 
+.m-auto {
+    margin: auto;
+}
+
 .text-preset-1 {
     font-family: var(--font-family);
     font-weight: var(--font-weight-black);
     font-size: 4rem;
     line-height: 1.1;
+    text-align: center;
 }
 
 .text-preset-2 {
@@ -116,6 +127,7 @@ img {
     font-weight: var(--font-weight-black);
     font-size: 2.5rem;
     line-height: 1.1;
+    text-align: center;
 }
 
 .text-preset-3 {
@@ -141,15 +153,16 @@ img {
     line-height: 1.5;
 }
 
-.flex-row {
-    display: flex;
-    flex-direction: row;
-    gap: 32px;
-}
-
 .showcase-images {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    gap: 32px;
+}
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
     gap: 32px;
 }
 
