Install tailwind html formatting

--- a/input.css
+++ b/input.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;900&display=swap');
+@import "tailwindcss";
 
 /* Style reset */
 *,
