Cleanup for Tailwind

--- a/output.css
+++ b/output.css
@@ -1,5 +1,5 @@
 /*! tailwindcss v4.1.7 | MIT License | https://tailwindcss.com */
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;900&display=swap");
 @layer theme, base, components, utilities;
 @layer theme {
   :root, :host {
@@ -7,10 +7,6 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-sky-100: oklch(95.1% 0.026 236.824);
-    --color-sky-300: oklch(82.8% 0.111 230.318);
-    --color-sky-400: oklch(74.6% 0.16 232.661);
-    --color-white: #fff;
     --font-weight-medium: 500;
     --font-weight-black: 900;
     --default-font-family: var(--font-sans);
@@ -199,35 +195,17 @@
   .shrink {
     flex-shrink: 1;
   }
-  .flex-row {
-    flex-direction: row;
-  }
-  .bg-sky-100 {
-    background-color: var(--color-sky-100);
-  }
-  .bg-sky-300 {
-    background-color: var(--color-sky-300);
-  }
-  .bg-sky-400 {
-    background-color: var(--color-sky-400);
-  }
-}
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-h1, h2, h3, p, ul, ol, body {
-  margin: 0;
 }
 :root {
-  --color-cyan-600: #4D96A9;
-  --color-cyan-300: #8FE3F9;
-  --color-purple-600: #855FB1;
-  --color-purple-300: #D9B8FF;
-  --color-slate-900: #28283D;
-  --color-slate-600: #87879D;
-  --color-slate-300: #D1F1DF;
-  --color-white: #FAFAFA;
-  --font-family: 'Red Hat Display', sans-serif;
+  --color-cyan-600: #4d96a9;
+  --color-cyan-300: #8fe3f9;
+  --color-purple-600: #855fb1;
+  --color-purple-300: #d9b8ff;
+  --color-slate-900: #28283d;
+  --color-slate-600: #87879d;
+  --color-slate-300: #d1f1df;
+  --color-white: #fafafa;
+  --font-family: "Red Hat Display", sans-serif;
   --font-weight-medium: 500;
   --font-weight-black: 900;
   --base-font-size: 16px;
@@ -246,74 +224,6 @@ h1, h2, h3, p, ul, ol, body {
 html {
   font-family: var(--font-family);
   font-size: var(--base-font-size);
-}
-body {
-  background-color: var(--color-white);
-}
-img {
-  max-inline-size: 100%;
-  block-size: auto;
-}
-header {
-  display: flex;
-  justify-content: center;
-}
-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: var(--spacing-400);
-  padding-top: var(--spacing-800);
-}
-button {
-  padding: var(--spacing-200) var(--spacing-500);
-  border-radius: var(--spacing-400);
-  border-style: none;
-}
-.color-cyan-600 {
-  color: #4D96A9;
-}
-.color-cyan-300 {
-  color: #8FE3F9;
-}
-.color-purple-600 {
-  color: #855FB1;
-}
-.color-purple-300 {
-  color: #D9B8FF;
-}
-.color-slate-900 {
-  color: #28283D;
-}
-.color-slate-600 {
-  color: #87879D;
-}
-.color-slate-300 {
-  color: #D1F1DF;
-}
-.color-white {
-  color: #FAFAFA;
-}
-.bg-color-cyan-600 {
-  background-color: #4D96A9;
-}
-.bg-color-purple-600 {
-  background-color: #855FB1;
-}
-.m-auto {
-  margin: auto;
-}
-.flex {
-  display: flex;
-}
-.max-w-content {
-  max-width: max-content;
-}
-.text-container {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-  max-width: 448px;
 }
 .text-preset-1 {
   font-family: var(--font-family);
@@ -349,35 +259,4 @@ button {
   font-weight: var(--font-weight-black);
   font-size: 1rem;
   line-height: 1.5;
-}
-.showcase-images {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 32px;
-}
-.flex-row {
-  display: flex;
-  flex-direction: row;
-  gap: 32px;
-}
-.showcase-images img {
-  flex: 1;
-  min-width: 0;
-}
-.button-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: var(--spacing-200);
-}
-@media screen and (max-width: 768px) {
-  .text-preset-1 {
-    font-size: 3rem;
-  }
-}
-@media screen and (max-width: 1440px) {
-  .text-preset-1 {
-    font-size: 2.5rem;
-  }
 }
