--- a/input.css
+++ b/input.css
@@ -1,222 +1,80 @@
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;900&display=swap");
 @import "tailwindcss";
 
-/* Style reset */
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
-h1,
-h2,
-h3,
-p,
-ul,
-ol,
-body {
-    margin: 0;
-}
-
 :root {
-    /* Colors */
-    --color-cyan-600: #4D96A9;
-    --color-cyan-300: #8FE3F9;
-    --color-purple-600: #855FB1;
-    --color-purple-300: #D9B8FF;
-    --color-slate-900: #28283D;
-    --color-slate-600: #87879D;
-    --color-slate-300: #D1F1DF;
-    --color-white: #FAFAFA;
+  /* Colors */
+  --color-cyan-600: #4d96a9;
+  --color-cyan-300: #8fe3f9;
+  --color-purple-600: #855fb1;
+  --color-purple-300: #d9b8ff;
+  --color-slate-900: #28283d;
+  --color-slate-600: #87879d;
+  --color-slate-300: #d1f1df;
+  --color-white: #fafafa;
 
-    /* Typography */
-    --font-family: 'Red Hat Display', sans-serif;
-    --font-weight-medium: 500;
-    --font-weight-black: 900;
-    --base-font-size: 16px;
+  /* Typography */
+  --font-family: "Red Hat Display", sans-serif;
+  --font-weight-medium: 500;
+  --font-weight-black: 900;
+  --base-font-size: 16px;
 
-    /* Spacing */
-    --spacing-50: 4px;
-    --spacing-100: 8px;
-    --spacing-200: 16px;
-    --spacing-300: 24px;
-    --spacing-400: 32px;
-    --spacing-500: 40px;
-    --spacing-700: 56px;
-    --spacing-800: 64px;
-    --spacing-900: 72px;
-    --spacing-1000: 80px;
-    --spacing-1400: 112px;
+  /* Spacing */
+  --spacing-50: 4px;
+  --spacing-100: 8px;
+  --spacing-200: 16px;
+  --spacing-300: 24px;
+  --spacing-400: 32px;
+  --spacing-500: 40px;
+  --spacing-700: 56px;
+  --spacing-800: 64px;
+  --spacing-900: 72px;
+  --spacing-1000: 80px;
+  --spacing-1400: 112px;
 }
 
 html {
-    font-family: var(--font-family);
-    font-size: var(--base-font-size);
-}
-
-body {
-    background-color: var(--color-white);
-}
-
-img {
-    max-inline-size: 100%;
-    block-size: auto;
-}
-
-header {
-    display: flex;
-    justify-content: center;
-}
-
-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: var(--spacing-400);
-    padding-top: var(--spacing-800);
-}
-
-button {
-    padding: var(--spacing-200) var(--spacing-500);
-    border-radius: var(--spacing-400);
-    border-style: none;
-}
-
-/* Utility Classes */
-.color-cyan-600 {
-    color: #4D96A9;
-}
-
-.color-cyan-300 {
-    color: #8FE3F9;
-}
-
-.color-purple-600 {
-    color: #855FB1;
-}
-
-.color-purple-300 {
-    color: #D9B8FF;
-}
-
-.color-slate-900 {
-    color: #28283D;
-}
-
-.color-slate-600 {
-    color: #87879D;
-}
-
-.color-slate-300 {
-    color: #D1F1DF;
-}
-
-.color-white {
-    color: #FAFAFA;
-}
-
-.bg-color-cyan-600 {
-    background-color: #4D96A9;
-}
-
-.bg-color-purple-600 {
-    background-color: #855FB1;
-}
-
-.m-auto {
-    margin: auto;
-}
-
-.flex {
-    display: flex;
-}
-
-.max-w-content {
-    max-width: max-content;
-}
-
-.text-container {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    max-width: 448px;
+  font-family: var(--font-family);
+  font-size: var(--base-font-size);
 }
 
 /* Custom classes */
 .text-preset-1 {
-    font-family: var(--font-family);
-    font-weight: var(--font-weight-black);
-    font-size: 4rem;
-    line-height: 1.1;
-    text-align: center;
+  font-family: var(--font-family);
+  font-weight: var(--font-weight-black);
+  font-size: 4rem;
+  line-height: 1.1;
+  text-align: center;
 }
 
 .text-preset-2 {
-    font-family: var(--font-family);
-    font-weight: var(--font-weight-black);
-    font-size: 2.5rem;
-    line-height: 1.1;
-    text-align: center;
+  font-family: var(--font-family);
+  font-weight: var(--font-weight-black);
+  font-size: 2.5rem;
+  line-height: 1.1;
+  text-align: center;
 }
 
 .text-preset-3 {
-    font-family: var(--font-family);
-    font-weight: var(--font-weight-black);
-    font-size: 1rem;
-    line-height: 1.1;
-    letter-spacing: 4px;
-    text-align: center;
-    /* text-transform: uppercase; */
+  font-family: var(--font-family);
+  font-weight: var(--font-weight-black);
+  font-size: 1rem;
+  line-height: 1.1;
+  letter-spacing: 4px;
+  text-align: center;
+  /* text-transform: uppercase; */
 }
 
 .text-preset-4 {
-    font-family: var(--font-family);
-    font-weight: var(--font-weight-medium);
-    font-size: 1.125rem;
-    line-height: 1.1;
-    text-align: center;
+  font-family: var(--font-family);
+  font-weight: var(--font-weight-medium);
+  font-size: 1.125rem;
+  line-height: 1.1;
+  text-align: center;
 }
 
 .text-preset-5 {
-    font-family: var(--font-family);
-    font-weight: var(--font-weight-black);
-    font-size: 1rem;
-    line-height: 1.5;
-}
-
-.showcase-images {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 32px;
-}
-
-.flex-row {
-    display: flex;
-    flex-direction: row;
-    gap: 32px;
-}
-
-.showcase-images img {
-    flex: 1;
-    min-width: 0;
-}
-
-.button-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: var(--spacing-200);
-}
-
-@media screen and (max-width: 768px) {
-    .text-preset-1 {
-        font-size: 3rem;
-    }
-}
-
-@media screen and (max-width: 1440px) {
-    .text-preset-1 {
-        font-size: 2.5rem;
-    }
+  font-family: var(--font-family);
+  font-weight: var(--font-weight-black);
+  font-size: 1rem;
+  line-height: 1.5;
 }
