--- a/output.css
+++ b/output.css
@@ -7,10 +7,12 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --spacing: 0.25rem;
     --font-weight-medium: 500;
     --font-weight-black: 900;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
+    --font-red-hat: "Red Hat Display", sans-serif;
   }
 }
 @layer base {
@@ -159,6 +161,12 @@
   }
 }
 @layer utilities {
+  .absolute {
+    position: absolute;
+  }
+  .relative {
+    position: relative;
+  }
   .container {
     width: 100%;
     @media (width >= 40rem) {
@@ -195,68 +203,42 @@
   .shrink {
     flex-shrink: 1;
   }
+  .p-8 {
+    padding: calc(var(--spacing) * 8);
+  }
+  .font-red-hat {
+    font-family: var(--font-red-hat);
+  }
 }
-:root {
-  --color-cyan-600: #4d96a9;
-  --color-cyan-300: #8fe3f9;
-  --color-purple-600: #855fb1;
-  --color-purple-300: #d9b8ff;
-  --color-slate-900: #28283d;
-  --color-slate-600: #87879d;
-  --color-slate-300: #d1f1df;
-  --color-white: #fafafa;
-  --font-family: "Red Hat Display", sans-serif;
-  --font-weight-medium: 500;
-  --font-weight-black: 900;
-  --base-font-size: 16px;
-  --spacing-50: 4px;
-  --spacing-100: 8px;
-  --spacing-200: 16px;
-  --spacing-300: 24px;
-  --spacing-400: 32px;
-  --spacing-500: 40px;
-  --spacing-700: 56px;
-  --spacing-800: 64px;
-  --spacing-900: 72px;
-  --spacing-1000: 80px;
-  --spacing-1400: 112px;
-}
-html {
-  font-family: var(--font-family);
-  font-size: var(--base-font-size);
-}
-.text-preset-1 {
-  font-family: var(--font-family);
-  font-weight: var(--font-weight-black);
-  font-size: 4rem;
-  line-height: 1.1;
-  text-align: center;
-}
-.text-preset-2 {
-  font-family: var(--font-family);
-  font-weight: var(--font-weight-black);
-  font-size: 2.5rem;
-  line-height: 1.1;
-  text-align: center;
-}
-.text-preset-3 {
-  font-family: var(--font-family);
-  font-weight: var(--font-weight-black);
-  font-size: 1rem;
-  line-height: 1.1;
-  letter-spacing: 4px;
-  text-align: center;
-}
-.text-preset-4 {
-  font-family: var(--font-family);
-  font-weight: var(--font-weight-medium);
-  font-size: 1.125rem;
-  line-height: 1.1;
-  text-align: center;
-}
-.text-preset-5 {
-  font-family: var(--font-family);
-  font-weight: var(--font-weight-black);
-  font-size: 1rem;
-  line-height: 1.5;
+@layer components {
+  .text-preset-1 {
+    font-weight: var(--font-weight-black);
+    font-size: 4rem;
+    line-height: 1.1;
+    text-align: center;
+  }
+  .text-preset-2 {
+    font-weight: var(--font-weight-black);
+    font-size: 2.5rem;
+    line-height: 1.1;
+    text-align: center;
+  }
+  .text-preset-3 {
+    font-weight: var(--font-weight-black);
+    font-size: 1rem;
+    line-height: 1.1;
+    letter-spacing: 4px;
+    text-align: center;
+  }
+  .text-preset-4 {
+    font-weight: var(--font-weight-medium);
+    font-size: 1.125rem;
+    line-height: 1.1;
+    text-align: center;
+  }
+  .text-preset-5 {
+    font-weight: var(--font-weight-black);
+    font-size: 1rem;
+    line-height: 1.5;
+  }
 }
