--- a/output.css
+++ b/output.css
@@ -185,8 +185,41 @@
       max-width: 96rem;
     }
   }
+  .-m-8 {
+    margin: calc(var(--spacing) * -8);
+  }
+  .-m-16 {
+    margin: calc(var(--spacing) * -16);
+  }
+  .m-12 {
+    margin: calc(var(--spacing) * 12);
+  }
   .m-auto {
     margin: auto;
+  }
+  .-mx-8 {
+    margin-inline: calc(var(--spacing) * -8);
+  }
+  .-mx-16 {
+    margin-inline: calc(var(--spacing) * -16);
+  }
+  .mx-auto {
+    margin-inline: auto;
+  }
+  .mt-12 {
+    margin-top: calc(var(--spacing) * 12);
+  }
+  .mt-16 {
+    margin-top: calc(var(--spacing) * 16);
+  }
+  .mb-8 {
+    margin-bottom: calc(var(--spacing) * 8);
+  }
+  .mb-12 {
+    margin-bottom: calc(var(--spacing) * 12);
+  }
+  .block {
+    display: block;
   }
   .contents {
     display: contents;
@@ -197,17 +230,63 @@
   .grid {
     display: grid;
   }
+  .w-full {
+    width: 100%;
+  }
   .flex-shrink {
     flex-shrink: 1;
   }
   .shrink {
     flex-shrink: 1;
   }
+  .content-center {
+    align-content: center;
+  }
+  .items-center {
+    align-items: center;
+  }
+  .justify-center {
+    justify-content: center;
+  }
+  .justify-items-center {
+    justify-items: center;
+  }
   .p-8 {
     padding: calc(var(--spacing) * 8);
   }
+  .pt-16 {
+    padding-top: calc(var(--spacing) * 16);
+  }
+  .pb-8 {
+    padding-bottom: calc(var(--spacing) * 8);
+  }
   .font-red-hat {
     font-family: var(--font-red-hat);
+  }
+  .md\:mb-16 {
+    @media (width >= 48rem) {
+      margin-bottom: calc(var(--spacing) * 16);
+    }
+  }
+  .md\:mb-18 {
+    @media (width >= 48rem) {
+      margin-bottom: calc(var(--spacing) * 18);
+    }
+  }
+  .md\:pb-16 {
+    @media (width >= 48rem) {
+      padding-bottom: calc(var(--spacing) * 16);
+    }
+  }
+  .lg\:mt-20 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 20);
+    }
+  }
+  .xl\:mt-20 {
+    @media (width >= 80rem) {
+      margin-top: calc(var(--spacing) * 20);
+    }
   }
 }
 @layer components {
