--- a/output.css
+++ b/output.css
@@ -7,6 +7,13 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-cyan-300: #8fe3f9;
+    --color-cyan-600: #4d96a9;
+    --color-purple-300: #d9b8ff;
+    --color-purple-600: #855fb1;
+    --color-slate-600: #87879d;
+    --color-slate-900: #28283d;
+    --color-white: #fafafa;
     --spacing: 0.25rem;
     --font-weight-medium: 500;
     --font-weight-black: 900;
@@ -161,12 +168,6 @@
   }
 }
 @layer utilities {
-  .absolute {
-    position: absolute;
-  }
-  .relative {
-    position: relative;
-  }
   .container {
     width: 100%;
     @media (width >= 40rem) {
@@ -185,21 +186,6 @@
       max-width: 96rem;
     }
   }
-  .-m-8 {
-    margin: calc(var(--spacing) * -8);
-  }
-  .-m-16 {
-    margin: calc(var(--spacing) * -16);
-  }
-  .m-12 {
-    margin: calc(var(--spacing) * 12);
-  }
-  .m-auto {
-    margin: auto;
-  }
-  .-mx-8 {
-    margin-inline: calc(var(--spacing) * -8);
-  }
   .-mx-16 {
     margin-inline: calc(var(--spacing) * -16);
   }
@@ -209,17 +195,8 @@
   .mt-12 {
     margin-top: calc(var(--spacing) * 12);
   }
-  .mt-16 {
-    margin-top: calc(var(--spacing) * 16);
-  }
-  .mb-8 {
-    margin-bottom: calc(var(--spacing) * 8);
-  }
   .mb-12 {
     margin-bottom: calc(var(--spacing) * 12);
-  }
-  .block {
-    display: block;
   }
   .contents {
     display: contents;
@@ -230,26 +207,20 @@
   .grid {
     display: grid;
   }
-  .w-full {
-    width: 100%;
-  }
   .flex-shrink {
     flex-shrink: 1;
   }
   .shrink {
     flex-shrink: 1;
   }
-  .content-center {
-    align-content: center;
-  }
-  .items-center {
-    align-items: center;
-  }
   .justify-center {
     justify-content: center;
   }
-  .justify-items-center {
-    justify-items: center;
+  .bg-cyan-600 {
+    background-color: var(--color-cyan-600);
+  }
+  .bg-purple-600 {
+    background-color: var(--color-purple-600);
   }
   .p-8 {
     padding: calc(var(--spacing) * 8);
@@ -263,10 +234,23 @@
   .font-red-hat {
     font-family: var(--font-red-hat);
   }
-  .md\:mb-16 {
-    @media (width >= 48rem) {
-      margin-bottom: calc(var(--spacing) * 16);
-    }
+  .text-cyan-300 {
+    color: var(--color-cyan-300);
+  }
+  .text-cyan-600 {
+    color: var(--color-cyan-600);
+  }
+  .text-purple-300 {
+    color: var(--color-purple-300);
+  }
+  .text-slate-600 {
+    color: var(--color-slate-600);
+  }
+  .text-slate-900 {
+    color: var(--color-slate-900);
+  }
+  .text-white {
+    color: var(--color-white);
   }
   .md\:mb-18 {
     @media (width >= 48rem) {
@@ -280,11 +264,6 @@
   }
   .lg\:mt-20 {
     @media (width >= 64rem) {
-      margin-top: calc(var(--spacing) * 20);
-    }
-  }
-  .xl\:mt-20 {
-    @media (width >= 80rem) {
       margin-top: calc(var(--spacing) * 20);
     }
   }
@@ -319,5 +298,9 @@
     font-weight: var(--font-weight-black);
     font-size: 1rem;
     line-height: 1.5;
+  }
+  .btn {
+    padding-inline: 40px;
+    padding-block: 16px;
   }
 }
