--- a/output.css
+++ b/output.css
@@ -1,5 +1,6 @@
 /*! tailwindcss v4.1.7 | MIT License | https://tailwindcss.com */
 @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;900&display=swap");
+@layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
   :root, :host {
@@ -15,8 +16,17 @@
     --color-slate-900: #28283d;
     --color-white: #fafafa;
     --spacing: 0.25rem;
+    --text-sm: 0.875rem;
+    --text-sm--line-height: calc(1.25 / 0.875);
+    --text-base: 1rem;
+    --text-base--line-height: calc(1.5 / 1);
+    --text-lg: 1.125rem;
+    --text-lg--line-height: calc(1.75 / 1.125);
+    --text-5xl: 3rem;
+    --text-5xl--line-height: 1;
     --font-weight-medium: 500;
     --font-weight-black: 900;
+    --radius-4xl: 2rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --font-red-hat: "Red Hat Display", sans-serif;
@@ -268,39 +278,95 @@
     }
   }
 }
+@layer base {
+  html {
+    line-height: 1.1;
+  }
+}
 @layer components {
   .text-preset-1 {
-    font-weight: var(--font-weight-black);
-    font-size: 4rem;
-    line-height: 1.1;
+    font-size: 2.5rem;
+    @media (width >= 48rem) {
+      font-size: var(--text-5xl);
+      line-height: var(--tw-leading, var(--text-5xl--line-height));
+    }
+    @media (width >= 64rem) {
+      font-size: 4rem;
+    }
     text-align: center;
+    --tw-font-weight: var(--font-weight-black);
+    font-weight: var(--font-weight-black);
   }
   .text-preset-2 {
-    font-weight: var(--font-weight-black);
-    font-size: 2.5rem;
-    line-height: 1.1;
+    font-size: 2rem;
+    @media (width >= 48rem) {
+      font-size: 36px;
+    }
+    @media (width >= 64rem) {
+      font-size: 2.5rem;
+    }
     text-align: center;
+    --tw-font-weight: var(--font-weight-black);
+    font-weight: var(--font-weight-black);
   }
   .text-preset-3 {
-    font-weight: var(--font-weight-black);
-    font-size: 1rem;
-    line-height: 1.1;
-    letter-spacing: 4px;
+    font-size: 0.75rem;
+    @media (width >= 48rem) {
+      font-size: var(--text-sm);
+      line-height: var(--tw-leading, var(--text-sm--line-height));
+    }
+    @media (width >= 64rem) {
+      font-size: 1rem;
+    }
     text-align: center;
+    --tw-font-weight: var(--font-weight-black);
+    font-weight: var(--font-weight-black);
+    --tw-tracking: 4px;
+    letter-spacing: 4px;
   }
   .text-preset-4 {
-    font-weight: var(--font-weight-medium);
-    font-size: 1.125rem;
-    line-height: 1.1;
+    font-size: var(--text-base);
+    line-height: var(--tw-leading, var(--text-base--line-height));
+    @media (width >= 64rem) {
+      font-size: var(--text-lg);
+      line-height: var(--tw-leading, var(--text-lg--line-height));
+    }
     text-align: center;
+    --tw-font-weight: var(--font-weight-medium);
+    font-weight: var(--font-weight-medium);
   }
   .text-preset-5 {
-    font-weight: var(--font-weight-black);
-    font-size: 1rem;
+    font-size: var(--text-base);
+    line-height: var(--tw-leading, var(--text-base--line-height));
+    --tw-leading: 1.5;
     line-height: 1.5;
+    --tw-font-weight: var(--font-weight-black);
+    font-weight: var(--font-weight-black);
   }
   .btn {
-    padding-inline: 40px;
-    padding-block: 16px;
+    border-radius: var(--radius-4xl);
+    padding-inline: calc(var(--spacing) * 10);
+    padding-block: calc(var(--spacing) * 4);
+  }
+}
+@property --tw-font-weight {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-tracking {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-leading {
+  syntax: "*";
+  inherits: false;
+}
+@layer properties {
+  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
+    *, ::before, ::after, ::backdrop {
+      --tw-font-weight: initial;
+      --tw-tracking: initial;
+      --tw-leading: initial;
+    }
   }
 }
