--- a/output.css
+++ b/output.css
@@ -198,9 +198,6 @@
       max-width: 96rem;
     }
   }
-  .-mx-16 {
-    margin-inline: calc(var(--spacing) * -16);
-  }
   .mx-auto {
     margin-inline: auto;
   }
@@ -231,21 +228,6 @@
   .h-auto {
     height: auto;
   }
-  .max-h-4 {
-    max-height: calc(var(--spacing) * 4);
-  }
-  .max-h-18 {
-    max-height: calc(var(--spacing) * 18);
-  }
-  .max-h-\[auto\] {
-    max-height: auto;
-  }
-  .w-32 {
-    width: calc(var(--spacing) * 32);
-  }
-  .w-full {
-    width: 100%;
-  }
   .max-w-full {
     max-width: 100%;
   }
@@ -254,15 +236,6 @@
   }
   .min-w-0 {
     min-width: calc(var(--spacing) * 0);
-  }
-  .min-w-36 {
-    min-width: calc(var(--spacing) * 36);
-  }
-  .min-w-80 {
-    min-width: calc(var(--spacing) * 80);
-  }
-  .min-w-\[147px\] {
-    min-width: 147px;
   }
   .flex-shrink {
     flex-shrink: 1;
@@ -279,9 +252,6 @@
   .flex-wrap {
     flex-wrap: wrap;
   }
-  .content-center {
-    align-content: center;
-  }
   .items-center {
     align-items: center;
   }
@@ -297,18 +267,11 @@
   .rounded-lg {
     border-radius: var(--radius-lg);
   }
-  .border-8 {
-    border-style: var(--tw-border-style);
-    border-width: 8px;
-  }
   .bg-cyan-600 {
     background-color: var(--color-cyan-600);
   }
   .bg-purple-600 {
     background-color: var(--color-purple-600);
-  }
-  .object-cover {
-    object-fit: cover;
   }
   .p-8 {
     padding: calc(var(--spacing) * 8);
@@ -324,9 +287,6 @@
   }
   .pb-14 {
     padding-bottom: calc(var(--spacing) * 14);
-  }
-  .text-left {
-    text-align: left;
   }
   .font-red-hat {
     font-family: var(--font-red-hat);
@@ -352,11 +312,6 @@
   .md\:mb-18 {
     @media (width >= 48rem) {
       margin-bottom: calc(var(--spacing) * 18);
-    }
-  }
-  .md\:flex-row {
-    @media (width >= 48rem) {
-      flex-direction: row;
     }
   }
   .md\:gap-6 {
@@ -403,6 +358,11 @@
 @layer base {
   html {
     line-height: 1.1;
+  }
+  button {
+    border-radius: var(--radius-4xl);
+    padding-inline: calc(var(--spacing) * 10);
+    padding-block: calc(var(--spacing) * 4);
   }
 }
 @layer components {
@@ -465,16 +425,6 @@
     --tw-font-weight: var(--font-weight-black);
     font-weight: var(--font-weight-black);
   }
-  .btn {
-    border-radius: var(--radius-4xl);
-    padding-inline: calc(var(--spacing) * 10);
-    padding-block: calc(var(--spacing) * 4);
-  }
-}
-@property --tw-border-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
 }
 @property --tw-font-weight {
   syntax: "*";
@@ -491,7 +441,6 @@
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
-      --tw-border-style: solid;
       --tw-font-weight: initial;
       --tw-tracking: initial;
       --tw-leading: initial;
